--- a/src/views/day.ejs
+++ b/src/views/day.ejs
@@ -62,6 +62,7 @@
         </nav>
     </header>
     <main>
+        <a href="/<%= this_user.username %>/calendar"><img src="/img/arrow-back.png" class="back"></a>
         <div class="view-day">
             <div class="box gap-30">
                 <h2 class="font chocolate-brown superbold big">Dia - <%= formatted_date %>
@@ -69,10 +70,10 @@
                 <% if (recipes.length> 0) { %>
                     <div class="width-100 flex-row flex-wrap gap-10">
                         <% recipes.forEach(recipe=> { %>
-                            <div class="box day-recipe-box gap-10 width-fit">
-                                <h3 class="font chocolate-brown bold margin-zero ">
+                            <a href="/<%= this_user.username %>/view-recipes-<%= recipe.id_recipe %>" class="box day-recipe-box gap-10 width-fit no-decoration smallerhover">
+                                <span class="font chocolate-brown superbold margin-zero no-decoration">
                                     <%= recipe.name %>
-                                </h3>
+                                </span>
                                 <hr class="margin-zero">
                                 <div class="recipe-info width-fit">
                                     <div class="icon-info">
@@ -88,7 +89,7 @@
                                         </span>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
                         <% }); %>
                     </div>
                 </div>
