--- a/src/views/day.ejs
+++ b/src/views/day.ejs
@@ -62,7 +62,7 @@
         </nav>
     </header>
     <main>
-        <a href="/<%= this_user.username %>/calendar"><img src="/img/arrow-back.png" class="back"></a>
+        <a href="/<%= this_user.username %>/calendar"><img src="/img/arrow-back.png" class="back icon-color"></a>
         <div class="view-day">
             <div class="box gap-30">
                 <h2 class="font chocolate-brown superbold big">Dia - <%= formatted_date %>
