--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -57,7 +57,7 @@
     </header>
     <main>
         <div class="font big-title green bold">
-            Crie, compartilhe e organize <br> Seu planejamento alimentar em um só lugar!
+            Crie e organize suas receitas... <br> Seu planejamento alimentar em um só lugar!
         </div>
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
