--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -119,14 +119,14 @@
                         <img src="/img/trophy-icon.png" class="trophy">
                         <div class="flex-column height-fit">
                             <span class="font bold small">Sua refeição mais consumida no último mês</span>
-                            <a href="" class="smallerhover font bold yellow small">Pizza de queijo</a>
+                            <a href="" class="smallerhover font bold yellow small">Nenhuma refeição</a>
                         </div>
                     </div>
                     <div class="flex-row gap-10 flex-start height-min width-100">
                         <img src="/img/trophy-icon.png" class="trophy">
                         <div class="flex-column height-fit">
                             <span class="font bold small">Seu tipo mais consumida no último mês</span>
-                            <a href="" class="smallerhover font bold yellow small">Pizza de queijo</a>
+                            <a href="" class="smallerhover font bold yellow small">Nenhum tipo</a>
                         </div>
                     </div>
                 </div>
