--- a/src/views/day.ejs
+++ b/src/views/day.ejs
@@ -94,7 +94,7 @@
                     </div>
                 </div>
                 <% } else { %>
-                <p>Não há receitas para este dia.</p>
+                <span class="font bold yellow">Não há receitas para este dia.</span>
                 <% } %>
             </div>
         </div>
